<resources>
    <string name="app_name">NDDRAndroidClient</string>
    <string name="home_exit_hint">再按一次退出</string>
    <string name="privilege_faild">授权失败</string>
    <string name="please_privilege">请先授予权限</string>
    <string name="crash_error_hint">发生意外错误\n抱歉，给您带来不便</string>
    <string name="crash_error_restart">重新启动</string>
    <string name="crash_error_log">错误日志</string>
    <string name="crash_error_details">错误详情</string>
    <string name="crash_error_info">错误信息</string>
    <string name="crash_copy_log">复制日志</string>
    <string name="crash_close">关闭</string>
    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="common_second">秒</string>
    <string name="common_m_status">分</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="time_next">下一步</string>
    <string name="time_last">上一步</string>
    <string name="time_start_title">请选择开始时间</string>
    <string name="time_end_time">请选择结束时间</string>
    <string name="createMapPathToServer">建图路径</string>
    <string name="network_notify">与服务连接断开，正在重连中...</string>
    <string name="networkNotify_1">（点击此处返回登录页面）</string>
    <string name="common_synchronization">同步</string>
    <string name="left_button">局域网</string>
    <string name="right_button">广域网</string>
    <string name="account_name">账号</string>
    <string name="password_hint">密码</string>
    <string name="login_button">登录</string>
    <string name="home_status">基础状态</string>
    <string name="home_map_manager">地图管理</string>
    <string name="home_task">时段管理</string>
    <string name="home_setting">高级设置</string>
    <string name="scram_status">急停</string>
    <string name="control_status">遥控</string>
    <string name="robot_shutdown">关机</string>
    <string name="app_quit">退出</string>
    <string name="switch_to_cn">切换成中文</string>
    <string name="switch_to_en">Switch to English</string>
    <string name="go_to_charge">去充电</string>
    <string name="line_speed">线速度：</string>
    <string name="angulau_speed">角速度：</string>
    <string name="angulau_speed_1">弧度/秒</string>
    <string name="auto_charge_notify_1">未开启自动充电功能，请设置后尝试</string>
    <string name="auto_charge_notify_2">当前地图未设置充电点，是否前往设置</string>
    <string name="auto_charge_notify_3">即将准备前往充电点</string>
    <string name="exit_charging">正在退出充电模式</string>
    <string name="bz_infomation">避障</string>
    <string name="new_create_map">新建地图</string>
    <string name="batch_delete">批量删除</string>
    <string name="common_exit">退出</string>
    <string name="common_delete">删除</string>
    <string name="no_map_notify">未发现地图信息,请新建地图</string>
    <string name="target_point_label">目标点</string>
    <string name="path_label">路径</string>
    <string name="map_edit">地图编辑</string>
    <string name="common_reference">参考层</string>
    <string name="common_create">新建</string>
    <string name="common_point_name">点名称:</string>
    <string name="common_point_toward">点朝向：</string>
    <string name="common_path_name">路径名称：</string>
    <string name="common_save">保存</string>
    <string name="common_path_mode">路线模式: </string>
    <string name="common_cs">延边距离：</string>
    <string name="run_speed">行驶速度：</string>
    <string name="action_recycler">动作列表：</string>
    <string name="add_action">添加</string>
    <string name="file_setting">文件配置：</string>
    <string name="map_size">地图面积：</string>
    <string name="create_time">建立日期：</string>
    <string name="ai_connected">AI服务连接成功</string>
    <string name="initial_point">初始点</string>
    <string name="no_point">无目标点</string>
    <string name="no_path">无路径</string>
    <string name="is_relocation">是否重定位</string>
    <string name="is_switch_map">是否切换地图</string>
    <string name="common_relocation">重定位</string>
    <string name="common_switch_map">切换地图</string>
    <string name="common_View_details">查看详情</string>
    <string name="common_map_set">地图设置</string>
    <string name="common_using">使用中</string>
    <string name="set_charge_point">设置充电点</string>
    <string name="charge_point">充电点</string>
    <string name="common_all">全选</string>
    <string name="common_warn">未加载到正在使用中的地图，请点击此处刷新！</string>
    <string name="now_device">当前设备:</string>
    <string name="now_map">当前地图：</string>
    <string name="now_task">当前任务：</string>
    <string name="common_unselected">未选择</string>
    <string name="work_status">工作状态：</string>
    <string name="task_times">任务次数：</string>
    <string name="working_hours">工作时长：</string>
    <string name="task_speed">任务速度：</string>
    <string name="common_waiting">待命中</string>
    <string name="create_task_steps">建立任务步骤：</string>
    <string name="first_steps">建立地图</string>
    <string name="second_steps">编辑目标点</string>
    <string name="thirdly_steps">建立任务</string>
    <string name="fourth_steps">运行任务</string>
    <string name="common_complete">完成</string>
    <string name="common_execute">执行</string>
    <string name="common_pause">暂停</string>
    <string name="common_wait">待命</string>
    <string name="common_charging">正在充电，底盘已关闭运动</string>
    <string name="common_charging_1">正在寻找充电桩</string>
    <string name="common_charging_2">正在前往充电点</string>
    <string name="common_exit_charge">退出充电</string>
    <string name="no_task">无任务</string>
    <string name="go_target_point">前往目标点</string>
    <string name="common_times">次</string>
    <string name="in_the_calibration">自标定中</string>
    <string name="common_runing">运动中</string>
    <string name="common_collecting">采集中</string>
    <string name="common_error">异常</string>
    <string name="common_relocationing">重定位中</string>
    <string name="common_Disconnect">断开连接</string>
    <string name="commonFailedToCharge">进入充电模式失败！</string>
    <string name="task_title">任务列表</string>
    <string name="save_task">同步任务</string>
    <string name="new_create_task">新建任务</string>
    <string name="task_name">任务名称</string>
    <string name="execute_time">执行时段</string>
    <string name="task_status">任务状态</string>
    <string name="operator_task">操作</string>
    <string name="common_modification">修改</string>
    <string name="common_terminated">已终止</string>
    <string name="common_recover">恢复</string>
    <string name="common_wait_execute">等待执行</string>
    <string name="common_stop">停止</string>
    <string name="common_executing">正在执行</string>
    <string name="common_executed">执行完毕</string>
    <string name="common_put_up">挂起</string>
    <string name="in_runing_task">正在运行的任务无法删除</string>
    <string name="navigation_para">导航参数</string>
    <string name="navigation_para_set">导航参数设置</string>
    <string name="height_set_save">保存</string>
    <string name="navigation_loop">导航循环方式</string>
    <string name="n_return_auto">自主返回循环</string>
    <string name="n_return_along">原路返回循环</string>
    <string name="n_return_auto_tip">任务终点和起点不一致时，自主规划路径从终点运行至起点，形成循环</string>
    <string name="n_return_along_tip">按设定任务，起点至终点往返循环，往返一次视为一次循环结束，适合较小场景使用</string>
    <string name="n_way_turn">路径转弯方式</string>
    <string name="n_point_turn">目标点转弯</string>
    <string name="n_arc_turn">智能平滑转弯</string>
    <string name="n_point_turn_tip">抵达点，按路径转弯，继续执行任务，适合较窄场景使用</string>
    <string name="n_arc_turn_tip">导航路径有折角时，自动计算转弯半径，提升执行效率，建议较大场景使用</string>
    <string name="n_speed_down">避障开始减速距离</string>
    <string name="n_speed_down_tip">机器人到障碍的距离小于此值开始减速</string>
    <string name="n_stop_distance">避障停止距离</string>
    <string name="n_stop_distance_tip">机器人到障碍的距离小于等于此值停止</string>
    <string name="n_restore_default">恢复默认</string>
    <string name="auto_charging">自动充电</string>
    <string name="auto_charging_set">自动充电设置</string>
    <string name="ac_open">开启自动充电</string>
    <string name="ac_open_tip">（当电池电量低于触发值，机器人自动返回充电）</string>
    <string name="ac_trig_auto_charge">触发自动充电电量</string>
    <string name="ac_stop_auto_charge">退出自动充电电量</string>
    <string name="height_set_open">开</string>
    <string name="height_set_close">关</string>
    <string name="sensor_set">超声波数据</string>
    <string name="ultrasonic_set">超声波配置</string>
    <string name="ultrasonic_set_tip">（静态模式下触发超声波，机器人会停止运动）</string>
    <string name="ultrasonic_set_title">（设置前务必知晓安装位置，超声波数值为0表示功能关闭）</string>
    <string name="imu_temperature">IMU温度设置</string>
    <string name="imu_temperature_tip">（建议设置比环境温度高10℃左右）</string>
    <string name="hardware_detection">硬件检测</string>
    <string name="hardware_name">硬件名称</string>
    <string name="self_test_results">自检结果</string>
    <string name="self_test_time">自检时间</string>
    <string name="self_test">一键自检</string>
    <string name="st_lidar">激光雷达</string>
    <string name="st_dual_cameras">摄像头</string>
    <string name="st_embedded_system">嵌入式</string>
    <string name="st_normal">正常</string>
    <string name="st_abnormal">异常</string>
    <string name="self_tested">自检完成</string>
    <string name="about_us">关于我们</string>
    <string name="au_app_version">安卓客户端版本</string>
    <string name="au_server_software_version">机器人服务端软件版本信息</string>
    <string name="au_module">模块</string>
    <string name="au_version">版本信息</string>
    <string name="au_update_time">版本更新时间</string>
    <string name="au_host_computer">上位机</string>
    <string name="au_lidar_module">雷达模块</string>
    <string name="au_route_plan">路径规划</string>
    <string name="au_vision_module">视觉模块</string>
    <string name="au_equipment_management">设备管理</string>
    <string name="au_embedded">嵌入式</string>
    <string name="voice_yl">语料播报</string>
    <string name="yl_voice_select">语料播报选项</string>
    <string name="Selecting">已选择</string>
    <string name="close_voice">关闭播报</string>
    <string name="obstacle_voice">遇障播报</string>
    <string name="last_voice">持续播报</string>
    <string name="voice_contant">语料播报内容:</string>
    <string name="voive_time">语料播报间隔:</string>
    <string name="collect_title_one">扫描环境中...</string>
    <string name="collect_title_two">正在自标定中...</string>
    <string name="collect_title_three">正在采集中...</string>
    <string name="common_detection">回环检测</string>
    <string name="gauge_point">标记点</string>
    <string name="conmon_collect_success">建图完成</string>
    <string name="mark_current">标记机器人当前位置</string>
    <string name="select_point">点击选择目标点建路径</string>
    <string name="common_gridlayout">网格</string>
    <string name="common_add_point">添加点</string>
    <string name="common_revocation">撤销</string>
    <string name="common_delete_point">删除点</string>
    <string name="common_init">初始化</string>
    <string name="common_virtual_wall">虚拟墙</string>
    <string name="common_denoising">原图去噪</string>
    <string name="common_line">直线</string>
    <string name="map_setting">地图设置</string>
    <string name="map_name">地图名称：</string>
    <string name="wait_point">待机点设置：</string>
    <string name="ab_mode">目标点呼叫运动模式：</string>
    <string name="static_mode">静态避障</string>
    <string name="dynamic_mode">动态避障</string>
    <string name="target_speed">目标点运动速度：</string>
    <string name="nav_notify">导航策略（注意：切换自主巡线后，需绘制行驶路径）</string>
    <string name="navigation_mode">自主导航模式</string>
    <string name="line_patrol">自主巡线模式</string>
    <string name="nav_notify_1">(自主规划行驶路线，无需人工指引操作)</string>
    <string name="nav_notify_2">(规划预设行驶路线，前往目标点时，寻找预设路径的最优路线）</string>
    <string name="map_recover">原图恢复</string>
    <string name="stay_put">原地待命</string>
    <string name="create_task_hint">点击左侧目标点、路径添加.</string>
    <string name="create_task_hint_1">可通过拖拽对列表进行排序.</string>
    <string name="create_task_hint_2">请选择相应的路径和目标点组建路径</string>
    <string name="create_task_hint_3">请避免连续添加同一个点！</string>
    <string name="create_task_hint_4">请避免连续添加同一条路径!</string>
    <string name="task_rename">任务重命名</string>
    <string name="name_already_exists">名称已存在，请重新命名。</string>
    <string name="cancel_rename">取消重命名!</string>
    <string name="manually_locate">手动定位</string>
    <string name="location_notify">提示:请通过平移、旋转地图，匹配激光雷达扫面形状，确定机器人当前位置</string>
    <string name="look_location_data">点击查看机器人位姿</string>
    <string name="relocation_failed">重新定位失败，请重新设置机器人位姿</string>
</resources>