<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="309dp"
    android:layout_height="50dp"
    android:background="@drawable/bg_switch_button">
    <TextView
        android:id="@+id/tv_left"
        android:layout_width="103dp"
        android:layout_height="match_parent"
        android:background="@drawable/bt_switch_button"
        android:text="@string/common_execute"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="12dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="9dp"
        android:autoSizeMaxTextSize="12dp"
        />
    <TextView
        android:id="@+id/tv_center"
        android:layout_width="103dp"
        android:layout_height="match_parent"
        android:text="@string/common_pause"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="12dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="9dp"
        android:autoSizeMaxTextSize="12dp"

        />
    <TextView
        android:id="@+id/tv_right"
        android:layout_width="103dp"
        android:layout_height="match_parent"
        android:text="@string/common_wait"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="12dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="9dp"
        android:autoSizeMaxTextSize="12dp"
        />

</LinearLayout>