<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101112"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <TextView
        android:layout_width="86.5dp"
        android:layout_height="34dp"
        android:textSize="14sp"
        android:textColor="#ffffff"
        android:text="@string/yl_voice_select"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="48dp"
        android:gravity="center"
        android:id="@+id/tv_yl_choose"
        />
    <ddr.example.com.nddrandroidclient.widget.textview.GridTextView
        android:id="@+id/tv_v_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_voice"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:gravity="center"
        android:drawableLeft="@mipmap/nocheckedwg"
        android:drawablePadding="6dp"
        android:layout_below="@id/tv_yl_choose"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="48dp"
        />
    <ddr.example.com.nddrandroidclient.widget.textview.GridTextView
        android:id="@+id/tv_v_obstacle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obstacle_voice"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:gravity="center"
        android:drawableLeft="@mipmap/nocheckedwg"
        android:drawablePadding="6dp"
        android:layout_below="@id/tv_yl_choose"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="148dp"
        />
    <ddr.example.com.nddrandroidclient.widget.textview.GridTextView
        android:id="@+id/tv_v_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_voice"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:gravity="center"
        android:drawableLeft="@mipmap/nocheckedwg"
        android:drawablePadding="6dp"
        android:layout_below="@id/tv_yl_choose"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="248dp"
        />
    <TextView
        android:layout_width="48dp"
        android:layout_height="24dp"
        android:text="@string/common_save"
        android:textSize="14sp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:background="@drawable/textview_button_top"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:layout_marginTop="24dp"
        android:id="@+id/tv_v_save"/>

    <TextView
        android:layout_width="748dp"
        android:layout_height="1dp"
        android:background="#262728"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="120dp"
        android:id="@+id/tv_secondBack"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:text="@string/voice_contant"
        android:layout_alignTop="@id/tv_secondBack"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="48dp"
        android:gravity="center"
        android:id="@+id/tv_yl_content"
        />
    <EditText
        android:layout_width="262dp"
        android:layout_height="34dp"
        android:textSize="12sp"
        android:textColor="#ffffff"
        android:layout_alignTop="@id/tv_secondBack"
        android:layout_marginTop="23.5dp"
        android:layout_toRightOf="@id/tv_yl_content"
        android:layout_marginLeft="30dp"
        android:imeOptions="actionDone"
        android:id="@+id/ed_yl_content"
        android:background="@drawable/bg_task_cz"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:text="@string/voive_time"
        android:layout_alignTop="@id/tv_secondBack"
        android:layout_marginTop="72dp"
        android:layout_marginLeft="48dp"
        android:gravity="center"
        android:id="@+id/tv_yl_time"
        />
    <EditText
        android:layout_width="62dp"
        android:layout_height="34dp"
        android:textSize="12sp"
        android:textColor="#ffffff"
        android:layout_alignTop="@id/tv_secondBack"
        android:layout_marginTop="70.5dp"
        android:layout_toRightOf="@id/tv_yl_content"
        android:layout_marginLeft="30dp"
        android:imeOptions="actionDone"
        android:id="@+id/ed_yl_time"
        android:digits="1234567890"
        android:maxLength="3"
        android:inputType="numberSigned|numberDecimal|text"
        android:background="@drawable/bg_task_cz"
        android:gravity="center"/>
    <TextView
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:text="秒"
        android:layout_toRightOf="@id/ed_yl_time"
        android:layout_alignTop="@id/tv_secondBack"
        android:layout_marginTop="70.5dp"
        android:textSize="12sp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_marginLeft="6dp"/>

</RelativeLayout>