<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101112"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        >
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:drawableLeft="@mipmap/iv_back"
            android:layout_marginLeft="24dp"
            android:text="@string/map_setting"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:drawablePadding="17dp"
            android:layout_marginTop="17dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#262728"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_map_name"
        android:layout_width="122dp"
        android:layout_height="24dp"
        android:text="@string/map_name"
        android:typeface="monospace"
        android:textColor="#99ffffff"
        android:textSize="12sp"
        android:gravity="left|center_vertical"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="32dp"
        android:layout_below="@id/layout_title"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="9sp"
        android:autoSizeMaxTextSize="@dimen/text_size_12sp"
        />
    <EditText
        android:id="@+id/et_map_name"
        android:layout_width="179dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:layout_below="@id/layout_title"
        android:layout_toRightOf="@id/tv_map_name"
        android:layout_marginLeft="33dp"
        android:background="@drawable/tv_mode_default_bg"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:text="map1"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:drawableLeft="@mipmap/iv_edit_rename"
        android:paddingLeft="5dp"
        android:imeOptions="actionDone"
        android:singleLine="true"
        />
    <View
        android:layout_width="384dp"
        android:layout_height="1dp"
        android:layout_below="@id/tv_map_name"
        android:background="#262728"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="24dp"/>
    <TextView
        android:id="@+id/tv_point_set"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:text="@string/wait_point"
        android:typeface="normal"
        android:textColor="#99ffffff"
        android:textSize="12sp"
        android:gravity="center_vertical"
        android:layout_alignParentRight="true"
        android:layout_marginRight="356dp"
        android:layout_marginTop="32dp"
        android:layout_below="@id/layout_title"
        android:drawableLeft="@mipmap/iv_hint"
        android:drawablePadding="5dp"
        android:autoSizeMaxTextSize="12sp"
        android:autoSizeMinTextSize="9sp"
        android:autoSizeTextType="uniform"
        />
    <TextView
        android:id="@+id/tv_switch_point"
        android:layout_width="172.5dp"
        android:layout_height="29dp"
        android:background="@drawable/bt_bg_mode"
        android:drawableLeft="@drawable/circle_blue"
        android:paddingLeft="21dp"
        android:drawablePadding="40dp"
        android:text="初始点"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:layout_marginTop="32dp"
        android:layout_below="@id/layout_title"
        android:layout_alignParentRight="true"
        android:layout_marginRight="127.5dp"
        />

    <View
        android:layout_width="384dp"
        android:layout_height="1dp"
        android:layout_below="@id/tv_point_set"
        android:background="#262728"
        android:layout_alignParentRight="true"
        android:layout_marginRight="48dp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tv_a_b_mode"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:text="@string/ab_mode"
        android:typeface="normal"
        android:textColor="#99ffffff"
        android:textSize="12sp"
        android:layout_below="@id/layout_title"
        android:layout_marginTop="109dp"
        android:gravity="left|center_vertical"
        android:layout_marginLeft="48dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeMaxTextSize="@dimen/text_size_12sp"
        />

    <TextView
        android:id="@+id/tv_static_mode"
        android:layout_width="82.5dp"
        android:layout_height="34dp"
        android:text="@string/static_mode"
        android:textColor="#ccffffff"
        android:textSize="12sp"
        android:layout_below="@id/layout_title"
        android:layout_marginTop="104dp"
        android:gravity="center"
        android:layout_toRightOf="@id/tv_a_b_mode"
        android:layout_marginLeft="36dp"
        android:background="@drawable/tv_mode_default_bg"
        android:autoSizeMaxTextSize="@dimen/text_size_12sp"
        android:autoSizeMinTextSize="9sp"
        android:autoSizeTextType="uniform"

        />
    <TextView
        android:id="@+id/tv_dynamic_mode"
        android:layout_width="82.5dp"
        android:layout_height="34dp"
        android:text="@string/dynamic_mode"
        android:textColor="#ccffffff"
        android:textSize="12sp"
        android:layout_below="@id/layout_title"
        android:layout_marginTop="104dp"
        android:gravity="center"
        android:layout_toRightOf="@id/tv_static_mode"
        android:layout_marginLeft="16dp"
        android:background="@drawable/tv_mode_selected_bg"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="9sp"
        android:autoSizeMaxTextSize="@dimen/text_size_12sp"
        />

    <View
        android:layout_width="384dp"
        android:layout_height="1dp"
        android:layout_below="@id/tv_a_b_mode"
        android:background="#262728"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="24dp"/>

    <!-- TextView "AB点运动速度" -->
    <TextView
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:text="@string/target_speed"
        android:textColor="#99ffffff"
        android:textSize="12sp"
        android:gravity="left|center_vertical"
        android:layout_alignParentRight="true"
        android:layout_marginRight="332dp"
        android:layout_marginTop="109dp"
        android:layout_below="@id/layout_title"
        android:autoSizeMaxTextSize="@dimen/text_size_12sp"
        android:autoSizeMinTextSize="9sp"
        android:autoSizeTextType="uniform"
        />
    <EditText
        android:id="@+id/et_a_b_speed"
        android:layout_width="62dp"
        android:layout_height="34dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="238dp"
        android:layout_marginTop="105dp"
        android:layout_below="@id/layout_title"
        android:background="@drawable/tv_mode_default_bg"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:text="0.1"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:imeOptions="actionDone"
        android:singleLine="true"
        />
    <TextView
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:text="m/s"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:gravity="right"
        android:layout_alignParentRight="true"
        android:layout_marginRight="206dp"
        android:layout_below="@id/layout_title"
        android:layout_marginTop="113dp"
        />
    <View
        android:layout_width="384dp"
        android:layout_height="1dp"
        android:layout_below="@id/et_a_b_speed"
        android:background="#262728"
        android:layout_marginRight="48dp"
        android:layout_marginTop="22dp"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="337dp"
        android:layout_height="24dp"
        android:layout_below="@id/layout_title"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="205dp"
        android:text="@string/nav_notify"
        android:textColor="#99ffffff"
        android:textSize="12sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeMaxTextSize="@dimen/text_size_12sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#262728"
        android:layout_below="@id/layout_title"
        android:layout_marginTop="248dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        />
    <TextView
        android:id="@+id/tv_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/nocheckedwg"
        android:text="@string/navigation_mode"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:gravity="center_vertical"
        android:drawablePadding="10dp"
        android:layout_below="@id/layout_title"
        android:layout_marginTop="273dp"
        android:layout_marginLeft="48dp"/>

    <TextView
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_navigation"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="12dp"
        android:gravity="right"
        android:text="@string/nav_notify_1"
        android:textColor="#99ffffff"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_line_patrol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="273dp"
        android:layout_below="@id/layout_title"
        android:layout_marginLeft="19dp"
        android:drawableLeft="@mipmap/nocheckedwg"
        android:text="@string/line_patrol"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:gravity="center_vertical"
        android:drawablePadding="10dp"
        android:layout_marginRight="339dp"
        />
    <TextView
        android:layout_width="370dp"
        android:layout_height="24dp"
        android:text="@string/nav_notify_2"
        android:textColor="#99ffffff"
        android:textSize="12sp"
        android:gravity="right"
        android:layout_below="@id/tv_line_patrol"
        android:layout_alignParentRight="true"
        android:layout_marginRight="75dp"
        android:layout_marginTop="14dp"
        android:autoSizeMaxTextSize="12sp"
        android:autoSizeMinTextSize="9sp"
        android:autoSizeTextType="uniform"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#262728"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="79dp"
        />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="112dp"
        android:layout_height="42dp"
        android:text="@string/common_cancel"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:gravity="center"
        android:background="@drawable/bt_bg__map"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="180dp"
        android:layout_marginBottom="14dp"
        />
    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="112dp"
        android:layout_height="42dp"
        android:text="@string/common_save"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:gravity="center"
        android:background="@drawable/bt_bg_map_blue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp" />

    <TextView
        android:id="@+id/tv_recover"
        android:layout_width="112dp"
        android:layout_height="42dp"
        android:layout_alignParentRight="true"
        android:text="@string/map_recover"
        android:gravity="center"
        android:textColor="#ccffffff"
        android:textSize="14sp"
        android:background="@drawable/bt_bg__map"
        android:layout_marginRight="180dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        />


</RelativeLayout>
